Improve the warning that shows up when pages use -moz-inline-box.  b=413195  r+sr=bzbarsky  a=beltzner